# login_api

./: .example.env  .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: actions.rs  main.rs  srp.rs
client/: package-lock.json  package.json
client/src/: auth-form.tsx  index.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml
client/src-tauri/src/: main.rs
db/: Cargo.toml
db/migrations/2023-09-26-170033_add_password/: up.sql
db/src/: models.rs  schema.rs
migrations/2023-07-18-203236_create_users_table/: up.sql
migrations/2023-09-26-170033_add_password/: down.sql
proto/: psw.proto
server/: Cargo.toml  build.rs
server/migrations/2023-09-26-170033_add_password/: up.sql
server/migrations/2023-10-18-190929_user_passwords/: up.sql
server/migrations/2023-11-12-201944_remove_unnecessary_user_fields/: down.sql  up.sql
server/migrations/2024-02-21-213034_refactor_user/: down.sql  up.sql
server/migrations/2024-02-21-215456_add_salt_column_to_users/: down.sql  up.sql
server/migrations/2024-06-16-150342_alter_verifier_length/: down.sql  up.sql
server/migrations/2024-07-08-204943_alter_verifier_type/: down.sql  up.sql
server/migrations/2024-07-11-210220_alter_salt_type/: down.sql  up.sql
server/src/: actions.rs  error.rs  main.rs  models.rs  schema.rs  utils.rs
src/: models.rs  schema.rs
ui/: index.html  package-lock.json  package.json
ui/src/: auth-form.tsx  index.tsx  register-form.tsx  utils.ts
