[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
srp = "0.6.0"
tokio = { version = "1.38.0", features = ["full"] }
rand = { version = "0.8.5", features = ["getrandom"] }
num-bigint = { version = "0.4.5", features = ["rand"] }
blake2 = "0.10.6"
clap = { version = "4.5.24", features = ["derive", "cargo"] }
tonic = "0.12.3"
prost = "0.13.4"
rpassword = "7.3.1"
serde-email = "3.1.0"
tokio-stream = "0.1.17"

[build-dependencies]
tonic-build = "0.12.3"
