[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
diesel = { version = "2.1.2", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
axum-macros = "0.3.8"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tower = "0.4.13"
argon2 = "0.5.2"
rand = { version = "0.8.5", features = ["getrandom"] }
jwt-simple = "0.11.9"
