[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
axum-macros = "0.4.1"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tower = "0.4.13"
argon2 = "0.5.3"
jwt-simple = "0.11.9"
aes-gcm = "0.10.3"
srp = "0.6.0"
