[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.38.0", features = ["full"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
axum-macros = "0.4.1"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tower = "0.4.13"
srp = "0.6.0"
rand = { version = "0.8.5", features = ["getrandom"] }
num-bigint = { version = "0.4.5", features = ["rand"] }
tokio-tungstenite = "0.23.1"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink", "std"] }
blake2 = "0.10.6"
serde_bytes = "0.11"
