[package]
name = "client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = ["shell-open"] }
srp = "0.6.0"
rand = { version = "0.8.5", features = ["getrandom"] }
num-bigint = { version = "0.4.5", features = ["rand"] }
blake2 = "0.10.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
